fix: more readable sepia body color

--- a/src/assets/style/vars.scss
+++ b/src/assets/style/vars.scss
@@ -46,7 +46,7 @@
 }
 
 :root [data-theme="sepia"]   {
-  --body-color: #5F4B32;
+  --body-color: #433422;
   --bg: #f1e7d0;
   --dark-bg: #111;
   --code-bg: #222;
